--- a/order.html
+++ b/order.html
@@ -12,7 +12,52 @@
   <title>Order Online</title>
 </head>
 <body>
+  <nav class="blue darken-3" role="navigation">
+      <div class="nav-wrapper"><a id="logo-container" href="#" class="brand-logo">Galvanize Delivers</a>
+          <ul class="right hide-on-med-and-down">
+              <li><a href="#">Order Delivery</a></li>
+          </ul>
+
+          <ul id="nav-mobile" class="side-nav">
+              <li><a href="#">Navbar Link</a></li>
+          </ul>
+          <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
+  </nav>
   <h1>Work in Progress</h1>
   <a href="index.html" id="download-button" class="btn-large waves-effect waves-light orange">Back to Home</a>
+
+
+
+  
+
+
+  <footer class="page-footer blue darken-4">
+      <div class="container">
+          <div class="row">
+              <div class="col l6 s12">
+                  <h5 class="white-text">Galvanize Delivers</h5>
+                  <p class="grey-text text-lighten-4">Fine Dining, Delivered</p>
+              </div>
+              <div class="col l6 s12 right-align">
+                  <ul>
+                      <li><a class="white-text" href="index.html">Home</a></li>
+                      <li><a class="white-text" href="order.html">Order Delivery</a></li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+      <div class="footer-copyright">
+          <div class="container">
+              ©2016 Galvanize Delivers
+          </div>
+      </div>
+  </footer>
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+
 </body>
 </html>
