added four cards onto order.html, cards include food img and price with link at bottom

--- a/order.html
+++ b/order.html
@@ -26,10 +26,66 @@
   </nav>
   <h1>Work in Progress</h1>
   <a href="index.html" id="download-button" class="btn-large waves-effect waves-light orange">Back to Home</a>
-
-
-
-  
+<div class="container">
+<div class="row">
+     <div class="col s12 m6">
+       <div class="card">
+         <div class="card-image">
+           <img src="img/burger.jpg">
+           <span class="card-title">Royale with Cheese</span>
+         </div>
+         <div class="card-content">
+           <p>$8.99</p>
+         </div>
+         <div class="card-action">
+           <a href="#">Add to Order</a>
+         </div>
+       </div>
+     </div>
+     <div class="col s12 m6">
+       <div class="card">
+         <div class="card-image">
+           <img src="img/pizza.jpg">
+           <span class="card-title">Arugula Pie</span>
+         </div>
+         <div class="card-content">
+           <p>$11.99</p>
+         </div>
+         <div class="card-action">
+           <a href="#">Add to Order</a>
+         </div>
+       </div>
+     </div>
+     <div class="col s12 m6">
+       <div class="card">
+         <div class="card-image">
+           <img src="img/ribs.jpg">
+           <span class="card-title">Smoked Swine</span>
+         </div>
+         <div class="card-content">
+           <p>$14.99</p>
+         </div>
+         <div class="card-action">
+           <a href="#">Add to Order</a>
+         </div>
+       </div>
+     </div>
+     <div class="col s12 m6">
+       <div class="card">
+         <div class="card-image">
+           <img src="img/ice_cream.jpg">
+           <span class="card-title">Ice Cream Biscut</span>
+         </div>
+         <div class="card-content">
+           <p>$7.99</p>
+         </div>
+         <div class="card-action">
+           <a href="#">Add to Order</a>
+         </div>
+       </div>
+     </div>
+   </div>
+</div>
 
 
   <footer class="page-footer blue darken-4">
