colored text pink

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav class="blue darken-3" role="navigation">
-        <div class="nav-wrapper"><a id="logo-container" href="#" class="brand-logo">Galvanize Delivers</a>
+        <div class="nav-wrapper"><a id="logo-container" href="index.html" class="brand-logo">Galvanize Delivers</a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="#">Order Delivery</a></li>
             </ul>
