--- a/order.html
+++ b/order.html
@@ -1,119 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Starter Template - Materialize</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+    <title>Starter Template - Materialize</title>
 
-  <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <title>Order Online</title>
+    <!-- CSS  -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <title>Order Online</title>
 </head>
+
 <body>
-  <nav class="blue darken-3" role="navigation">
-      <div class="nav-wrapper"><a id="logo-container" href="#" class="brand-logo">Galvanize Delivers</a>
-          <ul class="right hide-on-med-and-down">
-              <li><a href="#">Order Delivery</a></li>
-          </ul>
+    <nav class="blue darken-3" role="navigation">
+        <div class="nav-wrapper"><a id="logo-container" href="index.html" class="brand-logo">Galvanize Delivers</a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="#">Order Delivery</a></li>
+            </ul>
 
-          <ul id="nav-mobile" class="side-nav">
-              <li><a href="#">Navbar Link</a></li>
-          </ul>
-          <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-      </div>
-  </nav>
-  <h1>Work in Progress</h1>
-  <a href="index.html" id="download-button" class="btn-large waves-effect waves-light orange">Back to Home</a>
-<div class="container">
-<div class="row">
-     <div class="col s12 m6">
-       <div class="card">
-         <div class="card-image">
-           <img src="img/burger.jpg">
-           <span class="card-title">Royale with Cheese</span>
-         </div>
-         <div class="card-content">
-           <p>$8.99</p>
-         </div>
-         <div class="card-action">
-           <a href="#">Add to Order</a>
-         </div>
-       </div>
-     </div>
-     <div class="col s12 m6">
-       <div class="card">
-         <div class="card-image">
-           <img src="img/pizza.jpg">
-           <span class="card-title">Arugula Pie</span>
-         </div>
-         <div class="card-content">
-           <p>$11.99</p>
-         </div>
-         <div class="card-action">
-           <a href="#">Add to Order</a>
-         </div>
-       </div>
-     </div>
-     <div class="col s12 m6">
-       <div class="card">
-         <div class="card-image">
-           <img src="img/ribs.jpg">
-           <span class="card-title">Smoked Swine</span>
-         </div>
-         <div class="card-content">
-           <p>$14.99</p>
-         </div>
-         <div class="card-action">
-           <a href="#">Add to Order</a>
-         </div>
-       </div>
-     </div>
-     <div class="col s12 m6">
-       <div class="card">
-         <div class="card-image">
-           <img src="img/ice_cream.jpg">
-           <span class="card-title">Ice Cream Biscut</span>
-         </div>
-         <div class="card-content">
-           <p>$7.99</p>
-         </div>
-         <div class="card-action">
-           <a href="#">Add to Order</a>
-         </div>
-       </div>
-     </div>
-   </div>
-</div>
+            <ul id="nav-mobile" class="side-nav">
+                <li><a href="#">Navbar Link</a></li>
+            </ul>
+            <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+        </div>
+    </nav>
 
+    <div class="container">
+      <h4>Menu</h4>
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="row">
+                    <div class="col s12 m6">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="img/burger.jpg">
+                            </div>
+                            <div class="card-content">
+                                <p>Royale with Cheese</p>
+                                <p>$8.99</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="#" class="pink-text text-lighten-1">Add to Order</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m6">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="img/pizza.jpg">
+                            </div>
+                            <div class="card-content">
+                                <p>Arugula pie                 </p>
+                                <p>$11.99</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="#" class="pink-text text-lighten-1">Add to Order</a>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                    <div class="col s12 m6">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="img/ribs.jpg">
+                                <div class="card-content">
+                                    <p>Smoked Swine</p>
+                                    <p>$14.99</p>
+                                </div>
+                                <div class="card-action">
+                                    <a href="#" class="pink-text text-lighten-1">Add to Order</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m6">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="img/ice_cream.jpg">
+                            </div>
+                            <div class="card-content">
+                                <p>Ice Cream Biscut</p>
+                                <p>$7.99</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="#" class="pink-text text-lighten-1">Add to Order</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-  <footer class="page-footer blue darken-4">
-      <div class="container">
-          <div class="row">
-              <div class="col l6 s12">
-                  <h5 class="white-text">Galvanize Delivers</h5>
-                  <p class="grey-text text-lighten-4">Fine Dining, Delivered</p>
-              </div>
-              <div class="col l6 s12 right-align">
-                  <ul>
-                      <li><a class="white-text" href="index.html">Home</a></li>
-                      <li><a class="white-text" href="order.html">Order Delivery</a></li>
-                  </ul>
-              </div>
-          </div>
-      </div>
-      <div class="footer-copyright">
-          <div class="container">
-              ©2016 Galvanize Delivers
-          </div>
-      </div>
-  </footer>
+    <footer class="page-footer blue darken-4">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Galvanize Delivers</h5>
+                    <p class="grey-text text-lighten-4">Fine Dining, Delivered</p>
+                </div>
+                <div class="col l6 s12 right-align">
+                    <ul>
+                        <li><a class="white-text" href="index.html">Home</a></li>
+                        <li><a class="white-text" href="order.html">Order Delivery</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                ©2016 Galvanize Delivers
+            </div>
+        </div>
+    </footer>
 
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+    <!--  Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/init.js"></script>
 
 </body>
+
 </html>
