got subtotal to finally work and got the taxes to display but havent gotten toFixed to work

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="blue darken-3" role="navigation">
         <div class="nav-wrapper"><a id="logo-container" href="index.html" class="brand-logo">Galvanize Delivers</a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="#">Order Delivery</a></li>
+                <li><a href="order.html">Order Delivery</a></li>
             </ul>
 
             <ul id="nav-mobile" class="side-nav">
@@ -36,7 +36,9 @@
                     <a href="order.html" id="download-button" class="btn-large waves-effect waves-light pink lighten-1">Place An Order</a>
                 </div>
                 <br><br>
-                <div class="parallax"><img src="img/hero.jpg" alt="hero picture"></div>
+                <div class="parallax">
+                  <img src="img/hero.jpg" alt="hero picture">
+                </div>
             </div>
         </div>
     </div>
