--- a/order.html
+++ b/order.html
@@ -125,23 +125,23 @@
                 <form class="col s12">
                     <div class="input-field col s12">
                         <i class="material-icons prefix pink-text">account_circle</i>
-                        <input id="icon_prefix" type="text" class="validate">
+                        <input required id="icon_prefix" type="text" class="validate">
                         <label for="icon_prefix">First Name</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="material-icons prefix pink-text">phone</i>
-                        <input id="icon_telephone" type="tel" class="validate">
+                        <input required id="icon_telephone" type="tel" class="validate">
                         <label for="icon_telephone">Phone Number</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="material-icons prefix pink-text">home</i>
-                        <input id="icon_home" type="text" class="validate">
+                        <input required id="icon_home" type="text" class="validate">
                         <label for="icon_home">Address</label>
                     </div>
+                    <button id="checkout" class="btn waves-effect waves-light pink" type="submit" name="action">Place Order<i class="material-icons right">send</i>
+                    </button>
                 </form>
                 <div class="row center">
-                  <button id="checkout" class="btn waves-effect waves-light pink" type="submit" name="action">Place Order<i class="material-icons right">send</i>
-                  </button>
               </div>
             </div>
         </div>
